--- a/crates/daemon-slayer-cli/Cargo.toml
+++ b/crates/daemon-slayer-cli/Cargo.toml
@@ -6,5 +6,8 @@ version = "0.1.0"
 [dependencies]
 async-trait = {version = "0.1", optional = true}
 clap = {version = "4", features = ["string"]}
-daemon-slayer-core = {path = "../daemon-slayer-core"}
+daemon-slayer-core = {path = "../daemon-slayer-core", features = ["cli"]}
 tracing = "0.1"
+
+[dev-dependencies]
+tokio = {version = "1.23.0", features = ["macros", "rt-multi-thread"]}
