fix test script

--- a/Makefile.toml
+++ b/Makefile.toml
@@ -2,13 +2,13 @@
 default_to_workspace = false
 
 [tasks.test-admin]
-args = ["test", "--workspace", "--", "--nocapture"]
+args = ["test", "--workspace"]
 clear = true
 command = "cargo"
 env = {RUN_AS_SYSTEM = "true"}
 
 [tasks.test]
-args = ["test", "--workspace", "--", "--nocapture"]
+args = ["test", "--workspace"]
 clear = true
 command = "cargo"
 
