--- a/crates/daemon-slayer-logging/Cargo.toml
+++ b/crates/daemon-slayer-logging/Cargo.toml
@@ -17,6 +17,7 @@ windows-eventlog = ["tracing-eventlog"]
 [dependencies]
 async-trait = {version = "0.1"}
 confique = {version = ">= 0.2.2", optional = true}
+ctor = "0.1.26"
 daemon-slayer-core = {path = "../daemon-slayer-core"}
 directories = {version = "4", optional = true}
 futures = {version = "0.3", optional = true}
