--- a/Makefile.toml
+++ b/Makefile.toml
@@ -8,7 +8,7 @@ command = "cargo"
 env = {RUN_AS_SYSTEM = "true"}
 
 [tasks.test]
-args = ["test", "--workspace"]
+args = ["test", "--workspace", "--all-features"]
 clear = true
 command = "cargo"
 
@@ -33,71 +33,14 @@ cd ../grpc-tonic
 cargo build
 '''
 
-[tasks.build-coverage]
-args = ["build", "--workspace"]
-command = "cargo"
-env = {RUSTFLAGS = "-Cinstrument-coverage", LLVM_PROFILE_FILE = "daemon-slayer-%p-%m.profraw"}
-
-[tasks.gen-coverage]
-args = ["test", "--workspace"]
-command = "cargo"
-dependencies = ["build-coverage"]
-env = {RUSTFLAGS = "-Cinstrument-coverage", LLVM_PROFILE_FILE = "daemon-slayer-%p-%m.profraw"}
-
-[tasks.copy-coverage.windows]
-dependencies = ["gen-coverage"]
-script = '''
-cp C:\Windows\System32\default.profraw .
-'''
-
-[tasks.copy-coverage]
-dependencies = ["gen-coverage"]
-script = '''
-'''
-
-[tasks.gen-coverage-report]
-args = [
-  ".",
-  "-s",
-  ".",
-  "--binary-path",
-  "./target/debug/",
-  "-t",
-  "html",
-  "--branch",
-  "--ignore-not-existing",
-  "--ignore",
-  "target/**/*",
-  "--ignore",
-  "integration-tests/**/*",
-  "--ignore",
-  "daemon-slayer-macros/**/*",
-  "-o",
-  "./target/debug/coverage/",
-]
-command = "grcov"
-dependencies = ["copy-coverage"]
-install_crate = {rustup_component_name = "llvm-tools-preview", crate_name = "grcov"}
-
-[tasks.cleanup-coverage]
-clear = true
-dependencies = ["gen-coverage-report"]
-script = """
-rm *.profraw
-handle = glob_array ./**/*.profraw
-for path in ${handle}
-    rm ${path}
-end
-"""
-script_runner = "@duckscript"
-
 [tasks.coverage]
+args = ["llvm-cov", "--workspace", "--all-features", "--html", "--open", "--ignore-filename-regex", "\".cargo|.*_test\\.rs|integration_tests.*\""]
 clear = true
-dependencies = ["cleanup-coverage"]
-script = "xdg-open target/debug/coverage/index.html"
+command = "cargo"
+install_crate = "cargo-llvm-cov"
 
-[tasks.coverage.windows]
-clear = true
-dependencies = ["cleanup-coverage"]
-script = "./target/debug/coverage/index.html"
-script_runner = "@shell"
+[tasks.coverage-admin]
+args = ["llvm-cov", "--workspace", "--all-features", "--html", "--open", "--ignore-filename-regex", "\".cargo|.*_test\\.rs|integration_tests.*\""]
+command = "cargo"
+env = {RUN_AS_SYSTEM = "true"}
+install_crate = "cargo-llvm-cov"
