--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -7,10 +7,11 @@ version = "0.1.0"
 [dependencies]
 async-trait = "0.1.58"
 axum = "0.6.1"
+cargo_metadata = "0.15.2"
 confique = "0.2.2"
 daemon-slayer = {path = "../crates/daemon-slayer", features = ["server-standard", "client-standard", "extras"]}
 futures = "0.3.25"
-reqwest = {version = "0.11.12", features = ["blocking"]}
+reqwest = {version = "0.11.12"}
 serde = "1.0.147"
 tokio = {version = "1.21.2", features = ["rt-multi-thread"]}
 tracing = "0.1.37"
