initial process info support

--- a/crates/daemon-slayer/Cargo.toml
+++ b/crates/daemon-slayer/Cargo.toml
@@ -11,9 +11,10 @@ client-standard = [
   "daemon-slayer-logging/system",
   "config",
   "error-handler",
+  "process",
 ]
 extras = [
-  "file-watcher", # "plugin-ipc-health-check",
+  "file-watcher",
   "task-queue",
 ]
 server-standard = [
@@ -35,6 +36,7 @@ cli = [
   "daemon-slayer-health-check?/cli",
   "daemon-slayer-error-handler?/cli",
   "daemon-slayer-config?/cli",
+  "daemon-slayer-process?/cli",
 ]
 client = ["daemon-slayer-client"]
 config = [
@@ -54,6 +56,7 @@ ipc = ["daemon-slayer-ipc"]
 ipc-health-check = ["health-check", "daemon-slayer-health-check/ipc-health-check"]
 logging = ["daemon-slayer-logging"]
 # ipc-health-check = ["daemon-slayer-plugin-ipc-health-check"]
+process = ["daemon-slayer-process"]
 server = [
   "daemon-slayer-server",
   "daemon-slayer-config?/server",
@@ -74,8 +77,8 @@ daemon-slayer-file-watcher = {path = "../daemon-slayer-file-watcher", optional =
 daemon-slayer-health-check = {path = "../daemon-slayer-health-check", optional = true}
 daemon-slayer-ipc = {path = "../daemon-slayer-ipc", optional = true}
 daemon-slayer-logging = {path = "../daemon-slayer-logging", optional = true}
+daemon-slayer-process = {path = "../daemon-slayer-process", optional = true}
 daemon-slayer-server = {path = "../daemon-slayer-server", optional = true}
-daemon-slayer-tray = {path = "../daemon-slayer-tray", optional = true}
-# daemon-slayer-plugin-ipc-health-check = {path = "./daemon-slayer-plugins/ipc-health-check", optional = true}
 daemon-slayer-signals = {path = "../daemon-slayer-signals", optional = true}
 daemon-slayer-task-queue = {path = "../daemon-slayer-task-queue", optional = true}
+daemon-slayer-tray = {path = "../daemon-slayer-tray", optional = true}
