--- a/crates/daemon-slayer-error-handler/Cargo.toml
+++ b/crates/daemon-slayer-error-handler/Cargo.toml
@@ -4,12 +4,11 @@ name = "daemon-slayer-error-handler"
 version = "0.1.0"
 
 [features]
-cli = ["daemon-slayer-core"]
+cli = ["daemon-slayer-core/cli"]
 
 [dependencies]
-async-trait = {version = "0.1"}
 color-eyre = "0.6"
-daemon-slayer-core = {path = "../daemon-slayer-core", features = ["cli"], optional = true}
+daemon-slayer-core = {path = "../daemon-slayer-core"}
 once_cell = "1"
 tap = "1"
 thiserror = "1"
