--- a/crates/daemon-slayer-core/Cargo.toml
+++ b/crates/daemon-slayer-core/Cargo.toml
@@ -11,6 +11,7 @@ daemon-slayer-macros = {path = "../daemon-slayer-macros", optional = true}
 dyn-clonable = {version = "0.9", optional = true}
 futures = {version = "0.3"}
 once_cell = {version = "1", optional = true}
+owo-colors = {version = "3", optional = true}
 pin-project-lite = "0.2.9"
 strum = {version = "0.24", optional = true}
 strum_macros = {version = "0.24", optional = true}
@@ -20,9 +21,10 @@ tokio = {version = "1", features = ["sync"]}
 tokio-stream = {version = "0.1", features = ["sync"], optional = true}
 tokio-util = {version = "0.7"}
 tracing = "0.1"
+unicode-width = {version = "0.1", optional = true}
 
 [features]
-cli = ["clap", "strum", "strum_macros"]
+cli = ["clap", "strum", "strum_macros", "owo-colors", "unicode-width"]
 config = ["arc-swap", "dyn-clonable", "daemon-slayer-macros", "daemon-slayer-macros/config"]
 health-check = []
 server = ["tokio-stream"]
