--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,4 @@
 [workspace]
+exclude = ["crates/daemon-slayer-gui", "crates/daemon-slayer-console", "crates/daemon-slayer-tray"]
 members = ["crates/*", "integration-tests"]
 resolver = "2"
