--- a/crates/daemon-slayer-core/Cargo.toml
+++ b/crates/daemon-slayer-core/Cargo.toml
@@ -6,7 +6,7 @@ version = "0.1.0"
 [dependencies]
 arc-swap = {version = "1.5", optional = true}
 async-trait = "0.1"
-clap = {version = "4", optional = true}
+clap = {version = "4", features = ["derive"], optional = true}
 daemon-slayer-macros = {path = "../daemon-slayer-macros", optional = true}
 dyn-clonable = {version = "0.9", optional = true}
 futures = {version = "0.3"}
