--- a/crates/daemon-slayer-client/Cargo.toml
+++ b/crates/daemon-slayer-client/Cargo.toml
@@ -7,6 +7,7 @@ version = "0.1.0"
 arc-swap = {version = "1"}
 confique = {version = ">= 0.2.2", optional = true}
 daemon-slayer-core = {path = "../daemon-slayer-core", features = ["config"]}
+derivative = "2"
 dyn-clonable = "0.9"
 enumflags2 = "0.7"
 eyre = "0.6"
