--- a/crates/daemon-slayer-logging/Cargo.toml
+++ b/crates/daemon-slayer-logging/Cargo.toml
@@ -28,7 +28,7 @@ time = "0.3"
 tracing = "0.1"
 tracing-appender = {version = "0.2"}
 tracing-error = {version = "0.2"}
-tracing-ipc = {path = "../../../tracing-ipc/tracing-ipc", optional = true}
+tracing-ipc = {git = "https://github.com/aschey/tracing-ipc", rev = "2eaab76b62330415b2c98c8e51799997fa165264", optional = true}
 tracing-subscriber = {version = "0.3", features = ["local-time", "env-filter"]}
 
 [target.'cfg(windows)'.dependencies]
