--- a/crates/daemon-slayer-logging/Cargo.toml
+++ b/crates/daemon-slayer-logging/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.1.0"
 cli = ["daemon-slayer-core/cli"]
 config = ["confique", "serde"]
 file = ["directories"]
-ipc = ["tracing-ipc"]
+ipc = ["tilia"]
 linux-journald = ["tracing-journald"]
 mac-oslog = ["tracing-oslog"]
 server = []
@@ -24,11 +24,11 @@ once_cell = "1"
 serde = {version = "1", optional = true}
 tap = "1"
 thiserror = "1"
+tilia = {git = "https://github.com/aschey/tilia", rev = "f62f771e44cb043b57e430bc1e113dbc543ad939", optional = true}
 time = "0.3"
 tracing = "0.1"
 tracing-appender = {version = "0.2"}
 tracing-error = {version = "0.2"}
-tracing-ipc = {git = "https://github.com/aschey/tracing-ipc", rev = "2eaab76b62330415b2c98c8e51799997fa165264", optional = true}
 tracing-subscriber = {version = "0.3", features = ["local-time", "env-filter"]}
 
 [target.'cfg(windows)'.dependencies]
