--- a/crates/daemon-slayer-logging/Cargo.toml
+++ b/crates/daemon-slayer-logging/Cargo.toml
@@ -15,31 +15,45 @@ system = ["linux-journald", "mac-oslog", "windows-eventlog"]
 windows-eventlog = ["tracing-eventlog"]
 
 [dependencies]
-confique = {version = ">= 0.2.2", optional = true}
+confique = { version = ">= 0.2.2", optional = true }
 ctor = "0.2"
-daemon-slayer-core = {path = "../daemon-slayer-core"}
-directories = {version = "5", optional = true}
-futures = {version = "0.3", optional = true}
+daemon-slayer-core = { path = "../daemon-slayer-core" }
+directories = { version = "5", optional = true }
+futures = { version = "0.3", optional = true }
 once_cell = "1"
-serde = {version = "1", optional = true}
+serde = { version = "1", optional = true }
 tap = "1"
 thiserror = "1"
-tilia = {git = "https://github.com/aschey/tilia", rev = "ccfc59e04403da27784d9361bd766a4ce175e62c", optional = true}
+tilia = { git = "https://github.com/aschey/tilia", rev = "ccfc59e04403da27784d9361bd766a4ce175e62c", optional = true }
 time = "0.3"
 tracing = "0.1"
-tracing-appender = {version = "0.2"}
-tracing-error = {version = "0.2"}
-tracing-subscriber = {version = "0.3", features = ["local-time", "env-filter"]}
+tracing-appender = { version = "0.2" }
+tracing-error = { version = "0.2" }
+tracing-subscriber = { version = "0.3", features = [
+    "local-time",
+    "env-filter",
+] }
 
 [target.'cfg(windows)'.dependencies]
-tokio = {version = "1", features = ["rt-multi-thread", "signal", "net", "io-util", "sync"], optional = true}
-tracing-eventlog = {git = "https://github.com/aschey/tracing-eventlog", rev = "ba94d7635b20f8866067baae2bfb3d28bc883e63", optional = true}
+tokio = { version = "1", features = [
+    "rt-multi-thread",
+    "signal",
+    "net",
+    "io-util",
+    "sync",
+], optional = true }
+tracing-eventlog = { git = "https://github.com/aschey/tracing-eventlog", rev = "ba94d7635b20f8866067baae2bfb3d28bc883e63", optional = true }
 
 [target.'cfg(unix)'.dependencies]
-tokio = {version = "1", features = ["rt-multi-thread", "net", "io-util", "sync"], optional = true}
+tokio = { version = "1", features = [
+    "rt-multi-thread",
+    "net",
+    "io-util",
+    "sync",
+], optional = true }
 
 [target.'cfg(target_os="linux")'.dependencies]
-tracing-journald = {version = "0.3", optional = true}
+tracing-journald = { version = "0.3", optional = true }
 
 [target.'cfg(target_os="macos")'.dependencies]
-tracing-oslog = {version = "0.1", optional = true}
+tracing-oslog = { version = "0.1", optional = true }
