--- a/crates/daemon-slayer-task-queue/Cargo.toml
+++ b/crates/daemon-slayer-task-queue/Cargo.toml
@@ -6,11 +6,16 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-aide-de-camp = {git = "https://github.com/aschey/aide-de-camp", rev = "937143a1ccaa5d3f69d418e4ed120473e3762790"}
-aide-de-camp-sqlite = {git = "https://github.com/aschey/aide-de-camp", rev = "937143a1ccaa5d3f69d418e4ed120473e3762790", default-features = false, features = ["rustls"]}
-daemon-slayer-core = {path = "../daemon-slayer-core", features = ["server"]}
+aide-de-camp = { git = "https://github.com/aschey/aide-de-camp", rev = "937143a1ccaa5d3f69d418e4ed120473e3762790" }
+aide-de-camp-sqlite = { git = "https://github.com/aschey/aide-de-camp", rev = "937143a1ccaa5d3f69d418e4ed120473e3762790", default-features = false, features = [
+    "rustls",
+] }
+daemon-slayer-core = { path = "../daemon-slayer-core", features = ["server"] }
 log = "0.4"
-sqlx = {version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite"]}
-tokio = {version = "1", features = ["sync"]}
-tokio-stream = {version = "0.1", features = ["sync"]}
+sqlx = { version = "0.6", default-features = false, features = [
+    "runtime-tokio-rustls",
+    "sqlite",
+] }
+tokio = { version = "1", features = ["sync"] }
+tokio-stream = { version = "0.1", features = ["sync"] }
 tracing = "0.1"
