--- a/crates/daemon-slayer-config/Cargo.toml
+++ b/crates/daemon-slayer-config/Cargo.toml
@@ -4,11 +4,14 @@ name = "daemon-slayer-config"
 version = "0.1.0"
 
 [dependencies]
-arc-swap = {version = "1"}
-bat = {version = "0.23", default-features = false, features = ["regex-onig", "paging"], optional = true}
+arc-swap = { version = "1" }
+bat = { version = "0.23", default-features = false, features = [
+    "regex-onig",
+    "paging",
+], optional = true }
 confique = ">= 0.2.2"
-daemon-slayer-core = {path = "../daemon-slayer-core", features = ["config"]}
-daemon-slayer-file-watcher = {path = "../daemon-slayer-file-watcher"}
+daemon-slayer-core = { path = "../daemon-slayer-core", features = ["config"] }
+daemon-slayer-file-watcher = { path = "../daemon-slayer-file-watcher" }
 derivative = "2"
 directories = "5"
 edit = "0.1"
@@ -24,6 +27,6 @@ pretty-print = ["bat"]
 server = ["daemon-slayer-core/server"]
 
 [dev-dependencies]
-daemon-slayer-cli = {path = "../daemon-slayer-cli"}
+daemon-slayer-cli = { path = "../daemon-slayer-cli" }
 serde = "1.0.160"
 tempfile = "3.5.0"
