--- a/crates/daemon-slayer-server/Cargo.toml
+++ b/crates/daemon-slayer-server/Cargo.toml
@@ -4,9 +4,14 @@ name = "daemon-slayer-server"
 version = "0.1.0"
 
 [dependencies]
-daemon-slayer-core = {path = "../daemon-slayer-core", features = ["server", "signal"]}
-daemon-slayer-macros = {path = "../daemon-slayer-macros", features = ["server"]}
-futures = {version = "0.3"}
+daemon-slayer-core = { path = "../daemon-slayer-core", features = [
+    "server",
+    "signal",
+] }
+daemon-slayer-macros = { path = "../daemon-slayer-macros", features = [
+    "server",
+] }
+futures = { version = "0.3" }
 tap = "1"
 thiserror = "1"
 tracing = "0.1"
@@ -14,12 +19,24 @@ tracing = "0.1"
 [target.'cfg(windows)'.dependencies]
 once_cell = "1"
 registry = "1"
-signal-hook = {version = "0.3", optional = true}
-tokio = {version = "1", features = ["rt-multi-thread", "signal", "net", "macros", "sync"]}
-windows-service = {git = "https://github.com/aschey/windows-service-rs", rev = "467408c9aba7d8221e5cf5a9992765ad7abeeb55"}
+signal-hook = { version = "0.3", optional = true }
+tokio = { version = "1", features = [
+    "rt-multi-thread",
+    "signal",
+    "net",
+    "macros",
+    "sync",
+] }
+windows-service = { git = "https://github.com/aschey/windows-service-rs", rev = "467408c9aba7d8221e5cf5a9992765ad7abeeb55" }
 
 [target.'cfg(unix)'.dependencies]
-tokio = {version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros"]}
+tokio = { version = "1", features = [
+    "rt-multi-thread",
+    "net",
+    "io-util",
+    "sync",
+    "macros",
+] }
 
 [target.'cfg(target_os="linux")'.dependencies]
 sd-notify = "0.4"
