--- a/crates/daemon-slayer-signals/Cargo.toml
+++ b/crates/daemon-slayer-signals/Cargo.toml
@@ -4,15 +4,31 @@ name = "daemon-slayer-signals"
 version = "0.1.0"
 
 [dependencies]
-daemon-slayer-core = {path = "../daemon-slayer-core", features = ["server", "signal"]}
-futures = {version = "0.3"}
+daemon-slayer-core = { path = "../daemon-slayer-core", features = [
+    "server",
+    "signal",
+] }
+futures = { version = "0.3" }
 tracing = "0.1"
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3"
-signal-hook-tokio = {version = "0.3", features = ["futures-v0_3"]}
-tokio = {version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros"]}
+signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
+tokio = { version = "1", features = [
+    "rt-multi-thread",
+    "net",
+    "io-util",
+    "sync",
+    "macros",
+] }
 
 [target.'cfg(windows)'.dependencies]
-signal-hook = {version = "0.3"}
-tokio = {version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "signal"]}
+signal-hook = { version = "0.3" }
+tokio = { version = "1", features = [
+    "rt-multi-thread",
+    "net",
+    "io-util",
+    "sync",
+    "macros",
+    "signal",
+] }
