--- a/crates/daemon-slayer/Cargo.toml
+++ b/crates/daemon-slayer/Cargo.toml
@@ -13,10 +13,7 @@ client-standard = [
   "error-handler",
   "process",
 ]
-extras = [
-  "file-watcher",
-  "task-queue",
-]
+extras = ["file-watcher", "task-queue"]
 server-standard = [
   "server",
   "cli",
@@ -49,9 +46,15 @@ config-pretty-print = ["daemon-slayer-config/pretty-print"]
 console = ["daemon-slayer-console"]
 error-handler = ["daemon-slayer-error-handler"]
 file-watcher = ["daemon-slayer-file-watcher"]
-grpc-health-check = ["health-check", "daemon-slayer-health-check/grpc-health-check"]
+grpc-health-check = [
+  "health-check",
+  "daemon-slayer-health-check/grpc-health-check",
+]
 health-check = ["daemon-slayer-health-check"]
-http-health-check = ["health-check", "daemon-slayer-health-check/http-health-check"]
+http-health-check = [
+  "health-check",
+  "daemon-slayer-health-check/http-health-check",
+]
 logging = ["daemon-slayer-logging"]
 process = ["daemon-slayer-process"]
 server = [
@@ -64,17 +67,17 @@ task-queue = ["daemon-slayer-task-queue"]
 tray = ["daemon-slayer-tray", "client"]
 
 [dependencies]
-daemon-slayer-cli = {path = "../daemon-slayer-cli", optional = true}
-daemon-slayer-client = {path = "../daemon-slayer-client", optional = true}
-daemon-slayer-config = {path = "../daemon-slayer-config", optional = true}
-daemon-slayer-console = {path = "../daemon-slayer-console", optional = true}
-daemon-slayer-core = {path = "../daemon-slayer-core"}
-daemon-slayer-error-handler = {path = "../daemon-slayer-error-handler", optional = true}
-daemon-slayer-file-watcher = {path = "../daemon-slayer-file-watcher", optional = true}
-daemon-slayer-health-check = {path = "../daemon-slayer-health-check", optional = true}
-daemon-slayer-logging = {path = "../daemon-slayer-logging", optional = true}
-daemon-slayer-process = {path = "../daemon-slayer-process", optional = true}
-daemon-slayer-server = {path = "../daemon-slayer-server", optional = true}
-daemon-slayer-signals = {path = "../daemon-slayer-signals", optional = true}
-daemon-slayer-task-queue = {path = "../daemon-slayer-task-queue", optional = true}
-daemon-slayer-tray = {path = "../daemon-slayer-tray", optional = true}
+daemon-slayer-cli = { path = "../daemon-slayer-cli", optional = true }
+daemon-slayer-client = { path = "../daemon-slayer-client", optional = true }
+daemon-slayer-config = { path = "../daemon-slayer-config", optional = true }
+daemon-slayer-console = { path = "../daemon-slayer-console", optional = true }
+daemon-slayer-core = { path = "../daemon-slayer-core" }
+daemon-slayer-error-handler = { path = "../daemon-slayer-error-handler", optional = true }
+daemon-slayer-file-watcher = { path = "../daemon-slayer-file-watcher", optional = true }
+daemon-slayer-health-check = { path = "../daemon-slayer-health-check", optional = true }
+daemon-slayer-logging = { path = "../daemon-slayer-logging", optional = true }
+daemon-slayer-process = { path = "../daemon-slayer-process", optional = true }
+daemon-slayer-server = { path = "../daemon-slayer-server", optional = true }
+daemon-slayer-signals = { path = "../daemon-slayer-signals", optional = true }
+daemon-slayer-task-queue = { path = "../daemon-slayer-task-queue", optional = true }
+daemon-slayer-tray = { path = "../daemon-slayer-tray", optional = true }
