--- a/examples/custom-command/Cargo.toml
+++ b/examples/custom-command/Cargo.toml
@@ -6,9 +6,14 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = {version = "4.1.8", features = ["derive"]}
-daemon-slayer = {path = "../../crates/daemon-slayer", features = ["client-standard", "server-standard"]}
-derive_more = {version = "0.99.17", default-features = false, features = ["as_ref"]}
+clap = { version = "4.1.8", features = ["derive"] }
+daemon-slayer = { path = "../../crates/daemon-slayer", features = [
+    "client-standard",
+    "server-standard",
+] }
+derive_more = { version = "0.99.17", default-features = false, features = [
+    "as_ref",
+] }
 serde = "1.0.151"
-tokio = {version = "1.23.0", features = ["macros", "rt-multi-thread"]}
+tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.37"
