--- a/examples/standard/Cargo.toml
+++ b/examples/standard/Cargo.toml
@@ -5,11 +5,19 @@ version = "0.1.0"
 
 [dependencies]
 confique = "0.2.2"
-daemon-slayer = {path = "../../crates/daemon-slayer", features = ["client-standard", "server-standard"]}
-daemon-slayer-logging = {path = "../../crates/daemon-slayer-logging", features = ["system", "ipc"]}
-derive_more = {version = "0.99.17", default-features = false, features = ["as_ref"]}
+daemon-slayer = { path = "../../crates/daemon-slayer", features = [
+    "client-standard",
+    "server-standard",
+] }
+daemon-slayer-logging = { path = "../../crates/daemon-slayer-logging", features = [
+    "system",
+    "ipc",
+] }
+derive_more = { version = "0.99.17", default-features = false, features = [
+    "as_ref",
+] }
 serde = "1.0.151"
-tokio = {version = "1.23.0", features = ["macros", "rt-multi-thread"]}
+tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
 tracing = "0.1.37"
 
 [[bin]]
