--- a/integration-tests/Cargo.toml
+++ b/integration-tests/Cargo.toml
@@ -9,11 +9,15 @@ async-trait = "0.1.68"
 axum = "0.6.15"
 cargo_metadata = "0.15.4"
 confique = "0.2.3"
-daemon-slayer = {path = "../crates/daemon-slayer", features = ["server-standard", "client-standard", "extras"]}
+daemon-slayer = { path = "../crates/daemon-slayer", features = [
+    "server-standard",
+    "client-standard",
+    "extras",
+] }
 futures = "0.3.28"
-reqwest = {version = "0.11.16"}
+reqwest = { version = "0.11.16" }
 serde = "1.0.160"
-tokio = {version = "1.27.0", features = ["rt-multi-thread"]}
+tokio = { version = "1.27.0", features = ["rt-multi-thread"] }
 tracing = "0.1.37"
 
 [dev-dependencies]
