--- a/crates/daemon-slayer-signals/Cargo.toml
+++ b/crates/daemon-slayer-signals/Cargo.toml
@@ -10,6 +10,7 @@ daemon-slayer-core = { path = "../daemon-slayer-core", features = [
 ] }
 futures = { version = "0.3" }
 tracing = "0.1"
+tap = "1"
 
 [target.'cfg(unix)'.dependencies]
 signal-hook = "0.3"
