--- a/crates/daemon-slayer-core/Cargo.toml
+++ b/crates/daemon-slayer-core/Cargo.toml
@@ -25,6 +25,21 @@ tokio-stream = { version = "0.1", features = ["sync"], optional = true }
 tokio-util = { version = "0.7" }
 tracing = "0.1"
 unicode-width = { version = "0.1", optional = true }
+notify-rust = { version = "4", optional = true }
+
+[target.'cfg(windows)'.dependencies.widestring]
+version = "1"
+optional = true
+
+[target.'cfg(windows)'.dependencies.windows-sys]
+version = "0.48"
+optional = true
+features = [
+    "Win32_Foundation",
+    "Win32_System_RemoteDesktop",
+    "Win32_System_Environment",
+    "Win32_UI_WindowsAndMessaging",
+]
 
 [features]
 cli = [
@@ -44,3 +59,5 @@ config = [
 health-check = []
 server = ["tokio-stream", "background-service"]
 signal = ["once_cell"]
+notify = ["notify-rust", "process"]
+process = ["windows-sys", "widestring"]
