--- a/crates/daemon-slayer-error-handler/Cargo.toml
+++ b/crates/daemon-slayer-error-handler/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [features]
 cli = ["daemon-slayer-core/cli"]
+notify = ["daemon-slayer-core/notify"]
 
 [dependencies]
 color-eyre = "0.6"
