--- a/crates/daemon-slayer-core/Cargo.toml
+++ b/crates/daemon-slayer-core/Cargo.toml
@@ -25,21 +25,19 @@ tokio-stream = { version = "0.1", features = ["sync"], optional = true }
 tokio-util = { version = "0.7" }
 tracing = "0.1"
 unicode-width = { version = "0.1", optional = true }
-notify-rust = { version = "4", optional = true }
+notify-rust = { version = "4", optional = true, features = ["async"] }
 
-[target.'cfg(windows)'.dependencies.widestring]
-version = "1"
-optional = true
-
-[target.'cfg(windows)'.dependencies.windows-sys]
-version = "0.48"
-optional = true
-features = [
+[target.'cfg(windows)'.dependencies]
+windows-sys = { version = "0.48", optional = true, features = [
     "Win32_Foundation",
     "Win32_System_RemoteDesktop",
     "Win32_System_Environment",
     "Win32_UI_WindowsAndMessaging",
-]
+] }
+widestring = { version = "1", optional = true }
+
+[target.'cfg(target_os="linux")'.dependencies]
+zbus = { version = "3", optional = true, features = ["tokio"] }
 
 [features]
 cli = [
@@ -60,4 +58,4 @@ health-check = []
 server = ["tokio-stream", "background-service"]
 signal = ["once_cell"]
 notify = ["notify-rust", "process"]
-process = ["windows-sys", "widestring"]
+process = ["windows-sys", "widestring", "zbus", "tokio/process"]
