--- a/crates/daemon-slayer-client/Cargo.toml
+++ b/crates/daemon-slayer-client/Cargo.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [dependencies]
 arc-swap = { version = "1" }
+bollard = "0.14.0"
 confique = { version = ">= 0.2.2", optional = true }
 daemon-slayer-core = { path = "../daemon-slayer-core", features = ["config"] }
 derivative = "2"
@@ -16,6 +17,7 @@ serde = { version = "1" }
 strum = "0.24"
 strum_macros = "0.24"
 thiserror = "1"
+tokio = { version = "1", features = ["time"] }
 
 [target.'cfg(windows)'.dependencies]
 regex = "1"
@@ -25,7 +27,7 @@ windows-args = "0.2"
 windows-service = { git = "https://github.com/aschey/windows-service-rs", rev = "32919aebe4c59f7855a8ebd72fe7d716db6a8f28" }
 
 [target.'cfg(target_os="linux")'.dependencies]
-systemd_client = { git = "https://github.com/aschey/systemd-client", rev = "5d1c70d051a878933dc8d149393e768ca84fe0d8" }
+systemd_client = { git = "https://github.com/aschey/systemd-client", rev = "220fb254a657fcc78907d7997a13a098267ff5ca" }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 directories = "5"
