reimplement system tray

--- a/crates/daemon-slayer-tray/Cargo.toml
+++ b/crates/daemon-slayer-tray/Cargo.toml
@@ -4,6 +4,11 @@ name = "daemon-slayer-tray"
 version = "0.1.0"
 
 [dependencies]
+async-trait = "0.1"
 daemon-slayer-client = { path = "../daemon-slayer-client" }
 image = "0.24"
-tao = { version = "0.15", features = ["tray"] }
+tokio = { version = "1", features = ["sync", "macros", "time"] }
+tray-icon = "0.5"
+
+[target."cfg(target_os = \"linux\")".dependencies]
+gtk = "0.16"
