--- a/examples/standard/Cargo.toml
+++ b/examples/standard/Cargo.toml
@@ -8,6 +8,7 @@ confique = "0.2.2"
 daemon-slayer = { path = "../../crates/daemon-slayer", features = [
     "client-standard",
     "server-standard",
+    "tray",
 ] }
 daemon-slayer-logging = { path = "../../crates/daemon-slayer-logging", features = [
     "system",
