--- a/crates/daemon-slayer-tray/Cargo.toml
+++ b/crates/daemon-slayer-tray/Cargo.toml
@@ -7,8 +7,6 @@ version = "0.1.0"
 async-trait = "0.1"
 daemon-slayer-client = { path = "../daemon-slayer-client" }
 image = "0.24"
+tao = { git = "https://github.com/tauri-apps/tao", branch = "muda" }
 tokio = { version = "1", features = ["sync", "macros", "time"] }
 tray-icon = "0.5"
-
-[target."cfg(target_os = \"linux\")".dependencies]
-gtk = "0.16"
