--- a/crates/daemon-slayer-logging/Cargo.toml
+++ b/crates/daemon-slayer-logging/Cargo.toml
@@ -7,7 +7,7 @@ version = "0.1.0"
 cli = ["daemon-slayer-core/cli"]
 config = ["confique", "serde"]
 file = ["directories"]
-ipc = ["tilia"]
+ipc = ["tilia", "tower-rpc"]
 linux-journald = ["tracing-journald"]
 mac-oslog = ["tracing-oslog"]
 server = ["daemon-slayer-core/server"]
@@ -24,7 +24,7 @@ once_cell = "1"
 serde = { version = "1", optional = true }
 tap = "1"
 thiserror = "1"
-tilia = { git = "https://github.com/aschey/tilia", rev = "ccfc59e04403da27784d9361bd766a4ce175e62c", optional = true }
+tilia = { git = "https://github.com/aschey/tilia", rev = "d6dcdf00b83fd78902baa33c033758763065dfb7", optional = true }
 time = "0.3"
 tracing = "0.1"
 tracing-appender = { version = "0.2" }
@@ -33,6 +33,12 @@ tracing-subscriber = { version = "0.3", features = [
     "local-time",
     "env-filter",
 ] }
+tower-rpc = { git = "https://github.com/aschey/tower-rpc", rev = "72f2d60708dc57d91e8330f7efbec77744f763c3", optional = true, features = [
+    "client",
+    "server",
+    "ipc",
+] }
+
 
 [target.'cfg(windows)'.dependencies]
 tokio = { version = "1", features = [
