--- a/crates/daemon-slayer-client/Cargo.toml
+++ b/crates/daemon-slayer-client/Cargo.toml
@@ -34,6 +34,7 @@ directories = "5"
 launchd = { git = "https://github.com/aschey/launchd", rev = "7bb70df94936ae43198d7527b9be8fe25d9a48b2" }
 once_cell = "1"
 regex = "1"
+tokio = { version = "1", features = ["time", "process"] }
 
 [features]
 cli = ["daemon-slayer-core/cli"]
