--- a/crates/daemon-slayer-core/Cargo.toml
+++ b/crates/daemon-slayer-core/Cargo.toml
@@ -39,6 +39,10 @@ widestring = { version = "1", optional = true }
 [target.'cfg(target_os="linux")'.dependencies]
 zbus = { version = "3", optional = true, features = ["tokio"] }
 
+[target.'cfg(target_os="macos")'.dependencies]
+shlex = { version = "1", optional = true }
+regex = { version = "1", optional = true }
+
 [features]
 cli = [
     "clap",
@@ -58,4 +62,11 @@ health-check = []
 server = ["tokio-stream", "background-service"]
 signal = ["once_cell"]
 notify = ["notify-rust", "process"]
-process = ["windows-sys", "widestring", "zbus", "tokio/process"]
+process = [
+    "windows-sys",
+    "widestring",
+    "zbus",
+    "tokio/process",
+    "shlex",
+    "regex",
+]
