--- a/crates/daemon-slayer-notify/Cargo.toml
+++ b/crates/daemon-slayer-notify/Cargo.toml
@@ -9,9 +9,18 @@ edition = "2021"
 daemon-slayer-core = { path = "../daemon-slayer-core", features = [
     "server",
     "notify",
+    "process",
 ] }
 tokio = { version = "1", features = ["time"] }
 tracing = "0.1"
+notify-rust = { version = "4", optional = true, features = ["async"] }
+native-dialog = { version = "0.6", features = [
+    "windows_dpi_awareness",
+    "windows_visual_styles",
+], optional = true }
+tap = "1"
 
 [features]
 cli = ["daemon-slayer-core/cli"]
+native-notification = ["notify-rust"]
+dialog = ["native-dialog"]
