--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,6 +42,8 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y libgtk-3-dev webkit2gtk-4.0 libayatana-appindicator3-dev librsvg2-dev libxdo-dev
+      - name: clippy
+        run: cargo clippy --all-features
       - name: test
         env:
           PROTOC: ${{ github.workspace }}/protoc/bin/protoc
