--- a/crates/daemon-slayer-build-info/Cargo.toml
+++ b/crates/daemon-slayer-build-info/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+console = { version = "0.15", optional = true }
 daemon-slayer-core = { path = "../daemon-slayer-core" }
 vergen = { version = "8.2.4", optional = true }
 vergen-pretty = { version = "0.3.0", features = ["color"], optional = true }
@@ -17,4 +18,4 @@ git = ["vergen/git", "vergen/gix"]
 gix = ["vergen/gix"]
 rustc = ["vergen/rustc"]
 si = ["vergen/si"]
-cli = ["daemon-slayer-core/cli", "vergen-pretty"]
+cli = ["daemon-slayer-core/cli", "vergen-pretty", "console"]
