--- a/crates/daemon-slayer-client/Cargo.toml
+++ b/crates/daemon-slayer-client/Cargo.toml
@@ -16,10 +16,10 @@ dyn-clonable = "0.9"
 enumflags2 = "0.7"
 eyre = "0.6"
 owo-colors = { version = "3", features = ["supports-colors"] }
-serde = { version = "1" }
+serde = { version = "1", features = ["derive"] }
 spinoff = { version = "0.7.0", optional = true }
-strum = "0.24"
-strum_macros = "0.24"
+strum = "0.25"
+strum_macros = "0.25"
 thiserror = "1"
 tokio = { version = "1", features = ["time"] }
 
