add command to get config info

--- a/crates/daemon-slayer-process/Cargo.toml
+++ b/crates/daemon-slayer-process/Cargo.toml
@@ -10,8 +10,7 @@ daemon-slayer-core = { path = "../daemon-slayer-core" }
 num_cpus = "1"
 readonly = "0.2"
 serde = "1"
-strum = "0.24"
-strum_macros = "0.24"
+strum = { version = "0.25", features = ["derive"] }
 sysinfo = "0.29"
 
 [features]
