--- a/crates/daemon-slayer-client/Cargo.toml
+++ b/crates/daemon-slayer-client/Cargo.toml
@@ -18,8 +18,7 @@ eyre = "0.6"
 owo-colors = { version = "3", features = ["supports-colors"] }
 serde = { version = "1", features = ["derive"] }
 spinoff = { version = "0.7.0", optional = true }
-strum = "0.25"
-strum_macros = "0.25"
+strum = { version = "0.25", features = ["derive"] }
 thiserror = "1"
 tokio = { version = "1", features = ["time"] }
 
