--- a/crates/daemon-slayer-core/Cargo.toml
+++ b/crates/daemon-slayer-core/Cargo.toml
@@ -15,8 +15,7 @@ dyn-clonable = { version = "0.9", optional = true }
 futures = { version = "0.3" }
 owo-colors = { version = "3", optional = true }
 pin-project-lite = "0.2.10"
-strum = { version = "0.25", optional = true }
-strum_macros = { version = "0.25", optional = true }
+strum = { version = "0.25", features = ["derive"], optional = true }
 tap = "1"
 thiserror = "1"
 tokio = { version = "1", features = ["sync"] }
@@ -27,6 +26,7 @@ serde = { version = "1", features = ["derive"] }
 unicode-width = { version = "0.1", optional = true }
 notify-rust = { version = "4", optional = true, features = ["async"] }
 futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "563f413a206c50c7cc1a003cf6a9d3b227b0b04d" }
+strip-ansi-escapes = { version = "0.1", optional = true }
 
 [target.'cfg(windows)'.dependencies]
 windows-sys = { version = "0.48", optional = true, features = [
@@ -48,10 +48,10 @@ regex = { version = "1", optional = true }
 cli = [
     "clap",
     "strum",
-    "strum_macros",
     "owo-colors",
     "unicode-width",
     "downcast-rs",
+    "strip-ansi-escapes",
 ]
 config = [
     "arc-swap",
